# probability

./: Cargo.toml
examples/: rand.rs
src/distribution/: bernoulli.rs  beta.rs  binomial.rs  categorical.rs  exponential.rs  gamma.rs  gaussian.rs  laplace.rs  logistic.rs  lognormal.rs  mod.rs  pert.rs  triangular.rs  uniform.rs
