[package]
name = "probability"
version = "0.17.0"
license = "Apache-2.0/MIT"
authors = [
    "Brian Knapp <knappador@gmail.com>",
    "Denis Kolodin <deniskolodin@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Jon Lund Steffensen <jonlst@gmail.com>",
    "Marek Baczyński <imbaczek@gmail.com>",
    "Rúnar Berg Baugsson Sigríðarson <runarberg@zoho.com>",
    "Yuki Nagae <y-nagae@aptpod.co.jp>",
]
description = "The package provides a probability-theory toolbox."
documentation = "https://docs.rs/probability"
homepage = "https://github.com/stainless-steel/probability"
repository = "https://github.com/stainless-steel/probability"
readme = "README.md"
categories = ["algorithms", "science"]
keywords = ["distribution", "probability", "sampling", "statistics", "random"]

[features]
default = ["std"]
std = ["special/std"]

[dependencies]
random = "0.12"
# FIXME: use upstream version of `special` if proposed changes get accepted.
special = {git = "https://github.com/robamler/special.git", rev = "40212cd83217cc28a9af81869249a0853947727e", default-features = false}

[dev-dependencies]
assert = "0.7"
rand = {version = "0.8.5", default-features = false}
